[package]
name = "bevy-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.1"
bevy = "0.16.1"
bevy-inspector-egui = "0.32.0"
bevy_cursor = { version = "0.6.0", features = ["2d"] }
bevy_egui = "0.35.1"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.13.0"
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4", "js"] }
